--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-darksoft text-gray-100 font-sans antialiased overflow-x-hidden selection:bg-lilla-500 selection:text-white">
     <div id="root"></div>
